Improve git status support

When a file is renamed, report the name that has been removed too, so that
when we commit it, the removed files are passed too.

BUG: 314232